# simisearch

./: LICENSE  README.md  pyproject.toml
examples/: basic_usage.py
src/simisearch/: __init__.py  config.py  core.py  utils.py
src/simisearch/clients/: pubchem.py  swiss_similarity.py
tests/: test_core.py  test_utils.py
