[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simisearch"
version = "0.1.0"
description = "Find structurally similar compounds for a query SMILES via SwissSimilarity and PubChem."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Personal Use Only - see LICENSE" }
authors = [
    { name = "PouriaSobhi" }
]
keywords = ["cheminformatics", "drug-discovery", "smiles", "similarity-search", "rdkit"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Developers"
]
dependencies = [
    "requests>=2.28",
    "rdkit>=2023.3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/simisearch"

[tool.setuptools.packages.find]
where = ["src"]
